# Huomautus

./: .editorconfig  .gitignore  README.rst  build.gradle.kts  settings.gradle.kts
docs/: conf.py  index.rst  pyproject.toml  requirements.txt  setup.rst
docs/_static/css/: custom.css
docs/anno/: mixin.rst
gradle/: LICENCE-HEADER
huomautus/: build.gradle.kts
huomautus/src/main/java/green/sailor/huomautus/: MakeUp.java
huomautus/src/main/kotlin/: MixinImpl.kt  Processor.kt  util.kt
huomautus/src/main/kotlin/annotations/: AutoAccessor.kt  GenerateExtensions.kt  MixinImpl.kt
huomautus/src/main/kotlin/annotations/registration/: ProvideBlockEntity.kt  RegisterBlock.kt  RegisterBlockEntity.kt
huomautus/src/main/kotlin/generators/: BlocksGenerator.kt  JavaBridge.kt  ProcessorState.kt
huomautus/src/main/kotlin/generators/accessor/: AccessorGenerator.kt  JavaGen.kt  KotlinGen.kt
huomautus/src/main/kotlin/generators/accessorextentions/: AccessorExtensionsGenerator.kt
huomautus/src/main/kotlin/generators/autoaccessor/: AccessorGenerator.kt  JavaGen.kt  KotlinGen.kt
huomautus/src/main/kotlin/generators/registration/: BlockEntitiesGenerator.kt  BlocksGenerator.kt  shared.kt
huomautus/src/main/resources/: fabric.mod.json
testmod/: build.gradle.kts
testmod/src/main/java/green/sailor/mc/huomautus/testmod/mixin/: MinecraftClientAccessor.java
testmod/src/main/kotlin/: MakeUp.kt  TestBlock.kt  TestBlockEntity.kt
testmod/src/main/kotlin/mixin/: MixinMinecraftClient.kt  autoaccessor.kt
testmod/src/main/resources/: fabric.mod.json  testmod.mixins.json
