[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Laura F Dickinson <l@veriny.tf>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^2.3.1"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
